runtime: update ansible version
This updates the required ansible version from 2.10 to 4.x (2.11)

Signed-off-by: Teoman ONAY <tonay@redhat.com>

--- a/ceph-ansible.spec.in
+++ b/ceph-ansible.spec.in
@@ -15,8 +15,8 @@ Obsoletes:      ceph-iscsi-ansible <= 1.5
 
 BuildArch:      noarch
 
-BuildRequires: ansible >= 2.9
-Requires: ansible >= 2.9
+BuildRequires: ansible-core >= 2.11
+Requires: ansible-core >= 2.11
 
 %if 0%{?rhel} == 7
 BuildRequires: python2-devel
