--- a/roles/ceph-osd/defaults/main.yml
+++ b/roles/ceph-osd/defaults/main.yml
@@ -7,7 +7,7 @@
 # at their disposal, some people might want to have it
 # distributed on OSD nodes. Setting 'copy_admin_key' to 'true'
 # will copy the admin key to the /etc/ceph/ directory
-copy_admin_key: false
+copy_admin_key: true
 
 
 ##############
@@ -114,6 +114,7 @@ dmcrypt: False
 #   - data: /dev/sdb1
 
 lvm_volumes: []
+
 crush_device_class: ""
 osds_per_device: 1
 
