--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,12 +1,12 @@
 # These are Python requirements needed to run the functional tests
-testinfra>=3,<4
-pytest-xdist==1.28.0
-pytest>=4.6,<5.0
+testinfra
+pytest-xdist
+pytest
 ansible>=3,<4
 Jinja2>=2.10
 netaddr
 mock
 jmespath
-pytest-rerunfailures<9.0
+pytest-rerunfailures
 pytest-cov
 six
