--- a/infrastructure-playbooks/purge-cluster.yml
+++ b/infrastructure-playbooks/purge-cluster.yml
@@ -686,6 +686,11 @@
         enabled: no
       failed_when: false
 
+    - name: systemctl reset-failed ceph-crash  # noqa 303
+      command: "systemctl reset-failed {{ 'ceph-crash@' + ansible_facts['hostname'] if containerized_deployment | bool else 'ceph-crash.service' }}"
+      changed_when: false
+      failed_when: false
+
     - name: remove service file
       file:
         name: "/etc/systemd/system/ceph-crash.service"
