--- a/tox-filestore_to_bluestore.ini
+++ b/tox-filestore_to_bluestore.ini
@@ -4,7 +4,7 @@ envlist = {centos,ubuntu}-{container,non_container}-filestore_to_bluestore
 skipsdist = True
 
 [testenv]
-whitelist_externals =
+allowlist_externals =
     vagrant
     bash
     git
