--- a/tox-update.ini
+++ b/tox-update.ini
@@ -4,7 +4,7 @@ envlist = {centos,ubuntu}-{container,non_container}-update
 skipsdist = True
 
 [testenv]
-whitelist_externals =
+allowlist_externals =
     vagrant
     bash
     git
