--- a/tox.ini
+++ b/tox.ini
@@ -75,7 +75,7 @@ commands=
 
 # a test scenario for the lv-create.yml and lv-teardown playbooks
 [testenv:infra_lv_create]
-whitelist_externals =
+allowlist_externals =
     vagrant
     bash
     mkdir
@@ -316,7 +316,7 @@ commands=
   "
 
 [testenv]
-whitelist_externals =
+allowlist_externals =
     vagrant
     bash
     pip
