--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ skipsdist = True
 
 # a test scenario for the lv-create.yml and lv-teardown playbooks
 [testenv:infra_lv_create]
-whitelist_externals =
+allowlist_externals =
     vagrant
     bash
     mkdir
@@ -338,7 +338,7 @@ commands=
   "
 
 [testenv]
-whitelist_externals =
+allowlist_externals =
     vagrant
     bash
     pip
