tests: uninstall ansible prior to install 6.0 req
in order to avoid conflict with previous version installed

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/tox-subset_update.ini
+++ b/tox-subset_update.ini
@@ -54,6 +54,7 @@ commands=
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
   "'
 
+  pip uninstall -y ansible
   pip install -r {toxinidir}/tests/requirements.txt
 # upgrade mons
 # mon1
