ansible: use ansible.utils.ipwrap instead of ansible.netcommon.ipwrap
ansible.netcommon.ipwrap is deprecated and is not being redirected with ansible 2.9.*

Signed-off-by: Seena Fallah <seenafallah@gmail.com>
Co-authored-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/tox-subset_update.ini
+++ b/tox-subset_update.ini
@@ -56,6 +56,7 @@ commands=
 
   pip uninstall -y ansible
   pip install -r {toxinidir}/tests/requirements.txt
+  ansible-galaxy install -r {toxinidir}/requirements.yml -v
 # upgrade mons
 # mon1
   ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --limit mon1 --tags=mons --extra-vars "\
