ansible: bump to ansible 2.12
Add required changes to support ansible 2.12

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>
(cherry picked from commit aa68b06c99f09111effbdf3b3ac5efe99b5e92f6)

--- a/requirements.yml
+++ b/requirements.yml
@@ -4,3 +4,7 @@ collections:
   - name: https://opendev.org/openstack/ansible-config_template
     version: 1.2.1
     type: git
+  - name: ansible.utils
+    version: '>=2.5.0'
+  - name: community.general
+  - name: ansible.posix
