--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,8 +1,8 @@
 # These are Python requirements needed to run the functional tests
-testinfra>=3,<4
-pytest-xdist==1.28.0
-pytest>=4.6,<5.0
-ansible>=2.10,<2.11,!=2.9.10
+testinfra
+pytest-xdist
+pytest
+ansible-core>=2.12,<2.13
 Jinja2>=2.10
 netaddr
 mock
