--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -561,7 +561,7 @@ dummy:
 # DOCKER #
 ##########
 #ceph_docker_image: "ceph/daemon"
-#ceph_docker_image_tag: latest-master
+#ceph_docker_image_tag: latest-quincy
 #ceph_docker_registry: quay.io
 #ceph_docker_registry_auth: false
 #ceph_docker_registry_username:
