--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -553,7 +553,7 @@ ceph_tcmalloc_max_total_thread_cache: 134217728
 # DOCKER #
 ##########
 ceph_docker_image: "ceph/daemon"
-ceph_docker_image_tag: latest-master
+ceph_docker_image_tag: latest-quincy
 ceph_docker_registry: quay.io
 ceph_docker_registry_auth: false
 #ceph_docker_registry_username:
