--- a/tox-update.ini
+++ b/tox-update.ini
@@ -9,11 +9,13 @@ whitelist_externals =
     bash
     git
     pip
+    rm
 passenv=*
 setenv=
   ANSIBLE_SSH_ARGS = -F {changedir}/vagrant_ssh_config -o ControlMaster=auto -o ControlPersist=600s -o PreferredAuthentications=publickey
+  ANSIBLE_COLLECTIONS_PATH = {envdir}
   ANSIBLE_CONFIG = {toxinidir}/ansible.cfg
-  ANSIBLE_CALLBACK_WHITELIST = profile_tasks
+  ANSIBLE_CALLBACK_ENABLED = profile_tasks
   ANSIBLE_CACHE_PLUGIN = memory
   ANSIBLE_GATHERING = implicit
   # only available for ansible >= 2.5
@@ -38,7 +40,7 @@ commands=
   # use the stable-6.0 branch to deploy an octopus cluster
   git clone -b stable-6.0 --single-branch https://github.com/ceph/ceph-ansible.git {envdir}/tmp/ceph-ansible
   pip install -r {envdir}/tmp/ceph-ansible/tests/requirements.txt
-  ansible-galaxy install -r {envdir}/tmp/ceph-ansible/requirements.yml -v
+  ansible-galaxy collection install -r {envdir}/tmp/ceph-ansible/requirements.yml -v -p {envdir}/ansible_collections
 
 
   bash -c 'ANSIBLE_CONFIG={envdir}/tmp/ceph-ansible/ansible.cfg ansible-playbook -vv -i {envdir}/tmp/ceph-ansible/tests/functional/all_daemons{env:CONTAINER_DIR:}/hosts {envdir}/tmp/ceph-ansible/tests/functional/setup.yml'
@@ -71,8 +73,9 @@ commands=
   "'
 
   pip uninstall -y ansible
+  rm -rf {envdir}/ansible_collections
+  ansible-galaxy collection install -r {toxinidir}/requirements.yml -v -p {envdir}/ansible_collections
   pip install -r {toxinidir}/tests/requirements.txt
-  ansible-galaxy install -r {toxinidir}/requirements.yml -v -f
   ansible-playbook -vv -i {changedir}/{env:INVENTORY} {toxinidir}/infrastructure-playbooks/rolling_update.yml --extra-vars "\
       ireallymeanit=yes \
       ceph_docker_registry_auth=True \
