--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -481,6 +481,11 @@ dummy:
 #health_osd_check_retries: 20
 #health_osd_check_delay: 10
 
+##############
+# RBD-MIRROR #
+##############
+
+#ceph_rbd_mirror_pool: "rbd"
 
 ###############
 # NFS-GANESHA #
