--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -458,6 +458,11 @@ health_mon_check_delay: 10
 health_osd_check_retries: 20
 health_osd_check_delay: 10
 
+##############
+# RBD-MIRROR #
+##############
+
+ceph_rbd_mirror_pool: "rbd"
 
 ###############
 # NFS-GANESHA #
