do not use dev repo
The branch 'master' of ceph/ceph has been renamed to 'main'

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -213,7 +213,7 @@ dummy:
 #
 # Enabled when ceph_repository == 'dev'
 #
-#ceph_dev_branch: master # development branch you would like to use e.g: master, wip-hack
+#ceph_dev_branch: main # development branch you would like to use e.g: master, wip-hack
 #ceph_dev_sha1: latest # distinct sha1 to use, defaults to 'latest' (as in latest built)
 
 #nfs_ganesha_dev: false # use development repos for nfs-ganesha
