tests: use quay.io instead of quay.ceph.io
This makes the CI use quay.io instead of quay.ceph.io

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>
(cherry picked from commit e55ca0188190173320ca77c62d2a908e9e8f5c61)

--- a/tox-update.ini
+++ b/tox-update.ini
@@ -4,7 +4,7 @@ envlist = centos-{container,non_container}-update
 skipsdist = True
 
 [testenv]
-whitelist_externals =
+allowlist_externals =
     vagrant
     bash
     git
@@ -60,9 +60,9 @@ commands=
   # When rendering the ganesha.conf.j2 template, it complains because of undefined variables in the block "{% if nfs_obj_gw | bool %}" although we explicitly set this variable to false (see below).
   bash -c 'ANSIBLE_CONFIG={envdir}/tmp/ceph-ansible/ansible.cfg ansible-playbook -vv -i {envdir}/tmp/ceph-ansible/tests/functional/all_daemons{env:CONTAINER_DIR:}/hosts {envdir}/tmp/ceph-ansible/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
       delegate_facts_host={env:DELEGATE_FACTS_HOST:True} \
-      ceph_docker_registry={env:CEPH_DOCKER_REGISTRY:quay.ceph.io} \
-      ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph-ci/daemon} \
-      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-pacific} \
+      ceph_docker_registry={env:CEPH_DOCKER_REGISTRY:quay.io} \
+      ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph/daemon} \
+      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-quincy} \
       ceph_docker_registry_auth=True \
       ceph_docker_registry_username={env:DOCKER_HUB_USERNAME} \
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
