--- a/tox-update.ini
+++ b/tox-update.ini
@@ -50,8 +50,8 @@ commands=
   bash -c 'ANSIBLE_CONFIG={envdir}/tmp/ceph-ansible/ansible.cfg ansible-playbook -vv -i {envdir}/tmp/ceph-ansible/tests/functional/all_daemons{env:CONTAINER_DIR:}/hosts-upgrade-to-nautilus {envdir}/tmp/ceph-ansible/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
       delegate_facts_host={env:DELEGATE_FACTS_HOST:True} \
       ceph_stable_release=luminous \
-      ceph_docker_registry={env:CEPH_DOCKER_REGISTRY:quay.ceph.io} \
-      ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph-ci/daemon} \
+      ceph_docker_registry={env:CEPH_DOCKER_REGISTRY:quay.io} \
+      ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph/daemon} \
       ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-luminous} \
   "'
 
