tests: use quay.io instead of quay.ceph.io
This makes the CI use quay.io instead of quay.ceph.io

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>
(cherry picked from commit e55ca0188190173320ca77c62d2a908e9e8f5c61)

--- a/tox-subset_update.ini
+++ b/tox-subset_update.ini
@@ -4,7 +4,7 @@ envlist = centos-{container,non_container}-subset_update
 skipsdist = True
 
 [testenv]
-whitelist_externals =
+allowlist_externals =
     vagrant
     bash
     git
@@ -44,8 +44,8 @@ commands=
   # deploy the cluster
   bash -c 'ANSIBLE_CONFIG={envdir}/tmp/ceph-ansible/ansible.cfg ansible-playbook -vv -i {changedir}/{env:INVENTORY} {envdir}/tmp/ceph-ansible/{env:PLAYBOOK:site.yml.sample} --extra-vars "\
       delegate_facts_host={env:DELEGATE_FACTS_HOST:True} \
-      ceph_docker_registry=quay.ceph.io \
-      ceph_docker_image=ceph-ci/daemon \
+      ceph_docker_registry=quay.io \
+      ceph_docker_image=ceph/daemon \
       ceph_docker_image_tag=latest-octopus \
       ceph_docker_registry_auth=True \
       ceph_docker_registry_username={env:DOCKER_HUB_USERNAME} \
