tests: enforce some parameters for ceph-volume tests suite
dnm

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/group_vars/rhcs.yml.sample
+++ b/group_vars/rhcs.yml.sample
@@ -550,6 +550,12 @@ ceph_iscsi_config_dev: false
 #     rgw_zone: zone1
 #
 #ceph_conf_overrides: {}
+#ceph_conf_overrides_ceph_volume_tests:
+#  global:
+#    osd_pool_default_pg_num: 8
+#    osd_pool_default_size: 1
+#  osd:
+#    bluefs_buffered_io: false
 
 
 #############
