--- a/roles/ceph-config/tasks/main.yml
+++ b/roles/ceph-config/tasks/main.yml
@@ -130,7 +130,7 @@
     owner: "{{ ceph_uid if containerized_deployment | bool else 'ceph' }}"
     group: "{{ ceph_uid if containerized_deployment | bool else 'ceph' }}"
     mode: "0644"
-    config_overrides: "{{ ceph_conf_overrides }}"
+    config_overrides: "{{ ceph_conf_overrides_ceph_volume_tests }}"
     config_type: ini
   notify:
     - restart ceph mons
