--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -542,6 +542,12 @@ rgw_zone: default
 #     rgw_zone: zone1
 #
 ceph_conf_overrides: {}
+ceph_conf_overrides_ceph_volume_tests:
+  global:
+    osd_pool_default_pg_num: 8
+    osd_pool_default_size: 1
+  osd:
+    bluefs_buffered_io: false
 
 
 #############
