facts: fsid tasks when deploying clients Ceph with external cluster
These tasks are unnecessary executed when deploying client nodes on
an external Ceph cluster.

Closes: https://bugzilla.redhat.com/show_bug.cgi?id=2151285

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/roles/ceph-facts/tasks/facts.yml
+++ b/roles/ceph-facts/tasks/facts.yml
@@ -179,6 +179,8 @@
 
 - name: fsid related tasks
   when:
+    - groups[mon_group_name] is defined
+    - groups[mon_group_name] | length > 0
     - generate_fsid | bool
     - current_fsid.rc != 0
     - not rolling_update | bool
