Updates docker systemd files and reload docker daemon
Closes: https://bugzilla.redhat.com/show_bug.cgi?id=2147570

Signed-off-by: Teoman ONAY <tonay@ibm.com>

--- a/roles/ceph-handler/handlers/main.yml
+++ b/roles/ceph-handler/handlers/main.yml
@@ -3,6 +3,7 @@
   when:
      - not rolling_update | bool
      - not docker2podman | default(False) | bool
+     - not docker_update | default(False) | bool
   block:
     - name: make tempdir for scripts
       tempfile:
