whitelist->allowlist in tox.ini
Signed-off-by: Teoman ONAY <tonay@ibm.com>

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ skipsdist = True
 # a test scenario that deploys a luminous cluster with ceph-disk osds
 # and then upgrades to nautilus and migrates those osds to ceph-volume
 [testenv:migrate_ceph_disk_to_ceph_volume]
-whitelist_externals =
+allowlist_externals =
     vagrant
     bash
     git
