osd: drop filestore support
filestore objectstore will be gone in the next Ceph release.the
This drops the filestore support in ceph-ansible.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>
(cherry picked from commit 896d82877fec586e76561720761b31cc9a4b68d5)

--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -364,13 +364,6 @@ osd_objectstore: bluestore
 # Any device containing these patterns in their path will be excluded.
 osd_auto_discovery_exclude: "dm-*|loop*|md*|rbd*"
 
-# xattrs. by default, 'filestore xattr use omap' is set to 'true' if
-# 'osd_mkfs_type' is set to 'ext4'; otherwise it isn't set. This can
-# be set to 'true' or 'false' to explicitly override those
-# defaults. Leave it 'null' to use the default for your chosen mkfs
-# type.
-filestore_xattr_use_omap: null
-
 ## MDS options
 #
 mds_max_mds: 1
@@ -542,7 +535,7 @@ ceph_conf_overrides: {}
 # OS TUNING #
 #############
 
-disable_transparent_hugepage: "{{ false if osd_objectstore == 'bluestore' else true }}"
+disable_transparent_hugepage: "{{ false if osd_objectstore == 'bluestore' }}"
 os_tuning_params:
   - { name: fs.file-max, value: 26234859 }
   - { name: vm.zone_reclaim_mode, value: 0 }
