--- a/roles/ceph-validate/tasks/main.yml
+++ b/roles/ceph-validate/tasks/main.yml
@@ -8,8 +8,8 @@
 
 - name: validate osd_objectstore
   fail:
-    msg: "osd_objectstore must be either 'bluestore' or 'filestore'"
-  when: osd_objectstore not in ['bluestore', 'filestore']
+    msg: "osd_objectstore must be 'bluestore''"
+  when: osd_objectstore not in ['bluestore']
 
 - name: validate monitor network configuration
   fail:
