--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -372,13 +372,6 @@ dummy:
 # Any device containing these patterns in their path will be excluded.
 #osd_auto_discovery_exclude: "dm-*|loop*|md*|rbd*"
 
-# xattrs. by default, 'filestore xattr use omap' is set to 'true' if
-# 'osd_mkfs_type' is set to 'ext4'; otherwise it isn't set. This can
-# be set to 'true' or 'false' to explicitly override those
-# defaults. Leave it 'null' to use the default for your chosen mkfs
-# type.
-#filestore_xattr_use_omap: null
-
 ## MDS options
 #
 #mds_max_mds: 1
@@ -550,7 +543,7 @@ dummy:
 # OS TUNING #
 #############
 
-#disable_transparent_hugepage: "{{ false if osd_objectstore == 'bluestore' else true }}"
+#disable_transparent_hugepage: "{{ false if osd_objectstore == 'bluestore' }}"
 #os_tuning_params:
 #  - { name: fs.file-max, value: 26234859 }
 #  - { name: vm.zone_reclaim_mode, value: 0 }
