tests: use pacific image instead of quincy for initial deployment
update scenario should upgrade from pacific to quincy.
It is currently upgrading from quincy to quincy.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/tox-update.ini
+++ b/tox-update.ini
@@ -37,7 +37,7 @@ commands=
   bash {toxinidir}/tests/scripts/vagrant_up.sh --no-provision {posargs:--provider=virtualbox}
   bash {toxinidir}/tests/scripts/generate_ssh_config.sh {changedir}
 
-  # use the stable-6.0 branch to deploy an octopus cluster
+  # use the stable-6.0 branch to deploy a pacific cluster
   git clone -b stable-6.0 --single-branch https://github.com/ceph/ceph-ansible.git {envdir}/tmp/ceph-ansible
   pip install -r {envdir}/tmp/ceph-ansible/tests/requirements.txt
   ansible-galaxy collection install -r {envdir}/tmp/ceph-ansible/requirements.yml -v -p {envdir}/ansible_collections
@@ -62,7 +62,7 @@ commands=
       delegate_facts_host={env:DELEGATE_FACTS_HOST:True} \
       ceph_docker_registry={env:CEPH_DOCKER_REGISTRY:quay.io} \
       ceph_docker_image={env:CEPH_DOCKER_IMAGE:ceph/daemon} \
-      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-quincy} \
+      ceph_docker_image_tag={env:CEPH_DOCKER_IMAGE_TAG:latest-pacific} \
       ceph_docker_registry_auth=True \
       ceph_docker_registry_username={env:DOCKER_HUB_USERNAME} \
       ceph_docker_registry_password={env:DOCKER_HUB_PASSWORD} \
