--- a/roles/ceph-mgr/tasks/common.yml
+++ b/roles/ceph-mgr/tasks/common.yml
@@ -96,5 +96,5 @@
 
 - name: append dashboard modules to ceph_mgr_modules
   set_fact:
-    ceph_mgr_modules: "{{ ceph_mgr_modules | union(['dashboard', 'prometheus']) }}"
+    ceph_mgr_modules: "{{ ceph_mgr_modules | union(['cephadm', 'dashboard', 'prometheus']) }}"
   when: dashboard_enabled | bool
