tests: force rpm pkg upgrade
Due to a bug with the rpm version present in the current stream8 vagrant image,
we have to make sure it is first upgraded to the latest version.

(cherry picked from commit b87f214a96be5f834ba166014d54815d17ff6dd7)
Signed-off-by: Guillaume Abrioux <gabrioux@ibm.com>

--- a/tests/functional/lvm_setup.yml
+++ b/tests/functional/lvm_setup.yml
@@ -5,6 +5,21 @@
   tasks:
     - import_tasks: ../../raw_install_python.yml
 
+    - name: check if it is Atomic host
+      stat: path=/run/ostree-booted
+      register: stat_ostree
+      check_mode: no
+
+    - name: set fact for using Atomic host
+      set_fact:
+        is_atomic: '{{ stat_ostree.stat.exists }}'
+
+    - name: force rpm pkg upgrade
+      package:
+        name: rpm
+        state: latest
+      when: not is_atomic | bool
+
 - hosts: osds
   gather_facts: false
   become: yes
