--- a/dashboard.yml
+++ b/dashboard.yml
@@ -12,6 +12,10 @@
   gather_facts: false
   become: true
   pre_tasks:
+    - import_role:
+        name: ceph-defaults
+      tags: ['ceph_update_config']
+
     - name: set ceph node exporter install 'In Progress'
       run_once: true
       set_stats:
@@ -21,9 +25,6 @@
             start: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
   tasks:
-    - import_role:
-        name: ceph-defaults
-      tags: ['ceph_update_config']
     - import_role:
         name: ceph-facts
       tags: ['ceph_update_config']
@@ -47,10 +48,14 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts: "{{ monitoring_group_name }}"
+- hosts: "{{ monitoring_group_name | default('monitoring') }}"
   gather_facts: false
   become: true
   pre_tasks:
+    - import_role:
+        name: ceph-defaults
+      tags: ['ceph_update_config']
+
     - name: set ceph grafana install 'In Progress'
       run_once: true
       set_stats:
@@ -60,9 +65,6 @@
             start: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
   tasks:
-    - import_role:
-        name: ceph-defaults
-      tags: ['ceph_update_config']
     - import_role:
         name: ceph-facts
       tags: ['ceph_update_config']
@@ -86,10 +88,14 @@
 
 # using groups[] here otherwise it can't fallback to the mon if there's no mgr group.
 # adding an additional | default(omit) in case where no monitors are present (external ceph cluster)
-- hosts: "{{ groups[mgr_group_name] | default(groups[mon_group_name]) | default(omit) }}"
+- hosts: "{{ groups[mgr_group_name|default('mgrs')] | default(groups[mon_group_name|default('mons')]) | default(omit) }}"
   gather_facts: false
   become: true
   pre_tasks:
+    - import_role:
+        name: ceph-defaults
+      tags: ['ceph_update_config']
+
     - name: set ceph dashboard install 'In Progress'
       run_once: true
       set_stats:
@@ -99,9 +105,6 @@
             start: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
   tasks:
-    - import_role:
-        name: ceph-defaults
-      tags: ['ceph_update_config']
     - import_role:
         name: ceph-facts
       tags: ['ceph_update_config']
