--- a/site-container.yml.sample
+++ b/site-container.yml.sample
@@ -34,6 +34,8 @@
 
   tasks:
     # pre-tasks for following import -
+    - import_role:
+        name: ceph-defaults
     - name: gather facts
       setup:
         gather_subset:
@@ -56,8 +58,6 @@
       when: delegate_facts_host | bool
       tags: always
 
-    - import_role:
-        name: ceph-defaults
 
     # dummy container setup is only supported on x86_64
     # when running with containerized_deployment: true this task
@@ -503,7 +503,7 @@
 
     - name: set_fact container_binary
       set_fact:
-        container_binary: "{{ 'podman' if (podman_binary.stat.exists and ansible_facts['distribution'] == 'Fedora') or (ansible_facts['os_family'] == 'RedHat' and ansible_facts['distribution_major_version'] == '8') else 'docker' }}"
+        container_binary: "{{ 'podman' if (podman_binary.stat.exists and ansible_facts['distribution'] == 'Fedora') or (ansible_facts['os_family'] == 'RedHat' and ansible_facts['distribution_major_version'] in ['8', '9']) else 'docker' }}"
 
     - name: get ceph status from the first monitor
       command: >
