Add ipv6 libvirt support scenario in vagrant
Addition of ipv6 support in vagrant/libvirt and an all_daemons_ipv6 scenario.
Some typo fixes

Signed-off-by: Teoman ONAY <tonay@ibm.com>
(cherry picked from commit 8f3bdd855989b9d89cc89d764647cdeb97adaf8e)

--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,5 +1,5 @@
 # These are Python requirements needed to run the functional tests
-testinfra
+pytest-testinfra
 pytest-xdist
 pytest
 ansible>=2.10,<2.11,!=2.9.10
